--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -11,13 +11,13 @@
 
     <LinearLayout
         android:layout_width="80dp"
-        android:layout_height="50dp"
+        android:layout_height="match_parent"
         android:layout_marginEnd="10dp"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/iv_color"
+            android:id="@+id/ivMembercolor"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@drawable/circle_color_member" />
@@ -25,8 +25,9 @@
         <TextView
             android:id="@+id/tv_miembro"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chuyito"
+            android:layout_height="50dp"
+            android:textAlignment="center"
+            android:text="Abel Sánchez"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
