--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,24 +16,23 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/btnBack"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
-                android:src="@drawable/back_arrow_svg"
                 android:layout_marginRight="270dp"
-                />
+                android:src="@drawable/back_arrow_svg" />
 
             <ImageView
                 android:id="@+id/ivSettings"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="50dp"
-                android:src="@drawable/settings"/>
+                android:src="@drawable/settings" />
 
         </LinearLayout>
 
@@ -41,29 +40,28 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="10dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_casanombre_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Casa mochiss"
-                android:textSize="25sp"
-                android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="#00B2BE"/>
+                android:text="Casa mochiss"
+                android:textColor="#00B2BE"
+                android:textSize="25sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_centerHorizontal="true"
-            android:padding="2.5dp"
             android:layout_gravity="center"
-            >
+            android:padding="2.5dp">
 
             <Switch
                 android:id="@+id/switchOnOff"
@@ -73,7 +71,7 @@
                 android:thumb="@drawable/thumb_selector"
                 android:track="@drawable/track_selector"
                 app:switchMinWidth="160dp"
-                app:switchPadding="0dp"/>
+                app:switchPadding="0dp" />
 
             <LinearLayout
                 android:layout_width="160dp"
@@ -107,14 +105,14 @@
         </RelativeLayout>
 
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lv_dias"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:divider="@android:color/transparent"
-            android:dividerHeight="10dp"/>
+            android:dividerHeight="10dp" />
+
     </LinearLayout>
 
 
@@ -122,9 +120,9 @@
         android:id="@+id/addTask"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/add_task"
-        android:contentDescription="Agregar tarea"
+        android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="50dp"
-        android:layout_gravity="bottom|end"/>
+        android:contentDescription="Agregar tarea"
+        android:src="@drawable/add_task" />
 </FrameLayout>
