--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -1,54 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
     tools:context=".TaskDetail">
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="40dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="100dp"
+        android:gravity="center_horizontal">
 
-        <ImageView
-            android:id="@+id/btnBack"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:src="@drawable/back_arrow_svg"
-            android:layout_marginRight="270dp"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="40dp">
 
+            <ImageView
+                android:id="@+id/btnBack"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="270dp"
+                android:src="@drawable/back_arrow_svg" />
+        </LinearLayout>
 
+        <TextView
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:id="@+id/tv_titulotarea"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lavar trastes"/>
+
+        <TextView
+            android:textSize="20sp"
+            android:id="@+id/tv_descripcion"
+            android:textAlignment="center"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="Limpiar los trastes con cloro, ya tienen mucha comida"/>
+
+        <ListView
+            android:id="@+id/lvTaskDetail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <TextView
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:id="@+id/tv_titulotarea"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lavar trastes"/>
-    <TextView
-        android:textSize="20sp"
-        android:id="@+id/tv_descripcion"
-        android:textAlignment="center"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="Limpiar los trastes con cloro, ya tienen mucha comida"/>
-
-    <ListView
-        android:id="@+id/lvTaskDetail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
-
-
-
-</LinearLayout>
+    <ImageView
+        android:id="@+id/editTask"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:contentDescription="Editar tarea"
+        android:src="@drawable/edit_task" />
+</FrameLayout>
