--- a/app/src/main/res/layout/activity_create_home.xml
+++ b/app/src/main/res/layout/activity_create_home.xml
@@ -30,6 +30,8 @@
 
     <EditText
         android:maxLength="20"
+        android:inputType="text"
+        android:singleLine="true"
         android:id="@+id/etNombreHogar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
